# technotaggr

./: .gitignore  README.md  dash_app.py  pyproject.toml
.cursor/plans/: gradio-interface-8d02ed85.plan.md  tech-3fc2adbe.plan.md
notebooks/: essentia_tensorflow.ipynb
prompts/: Index of _models_classification-heads_mood_happy_.html  essentiamodels.md  gradio.md  init.md  later-features.md  post-processing.md  prompts.md  tagging_output.md  visualization.md  warning.md
prompts/docs/: How to Style the Gradio Dataframe .md  How to Use the Plot Component for Maps .md  Image Classification in PyTorch.md  Named-Entity Recognition.md  file-explorer.md  gradio-theming.md  json.md  wrapping-layouts.md
prompts/docs/Dash/: section_001_preamble.md  section_002_https-dash-plotly-com-assets-images-language_icons-python_50px-svg-dash-in-20-minutes.md  section_003_hello-world.md  section_004_hello-world-code-breakdown.md  section_005_connecting-to-data.md  section_006_connect-to-data-code-breakdown.md  section_012_html-and-css.md  (+9 more)
src/technotaggr/: __init__.py  app.py  audio.py  cli.py  config.py  dash_app.py  download_models.py  inference.py  model_loader.py  plotly-cloud.toml  postprocessing.py  result_logger.py  visualization.py
technotaggr_results/: results_20251201_004358.json  results_20251201_093052.json  results_20251201_093114.json  results_20251201_093127.json  results_20251201_095215.json  results_20251201_095352.json  results_20251201_095820.json  results_20251201_113634.json  results_20251201_124648.json  results_20251202_091856.json  results_20251202_124236.json
(+1 files in other folders)
