[project]
name = "technotaggr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mishkin", email = "mlgelman@usc.edu" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
technotaggr = "technotaggr:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
